<resources>
    <string name="app_name">Friend events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Welkom</string>
    <string name="titleSignUp">Sign Up</string>
    <string name="LoginText">Al geregestreerd?</string>
    <string name="SignUpText">Nog niet geregestreerd?</string>
    <string name="UsernameText">Gebruikersnaam</string>
    <string name="PasswordText">Wachtwoord</string>
    <string name="ButtonChooseLogin">Login</string>
    <string name="ButtonLogin">Login</string>
    <string name="ButtonSignUp">Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="FirstNameText">Voornaam</string>
    <string name="NameText">Naam</string>
    <string name="birthDate">Geboortedatum</string>
    <string name="emailText">Email</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="DrawerLayout">DrawerLayout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="textview">TextView</string>
    <string name="alex">Alex</string>
</resources>
