<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             tools:context=".SignUp">

    <ScrollView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/user_signUp_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/firstNameAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/FirstNameText"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/nameAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/NameText"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/userAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/UsernameText"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/birthDateAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthDate"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>
            </android.support.design.widget.TextInputLayout>
            <EditText
                    android:id="@+id/emailAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" android:autofillHints=""/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/passwordAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/PasswordText"
                        android:imeActionId="7"
                        android:imeActionLabel="@string/SignUpText"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/signUp_button"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:text="@string/ButtonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded_corners"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

        </LinearLayout>
    </ScrollView>
    <Button
            android:text="@string/ButtonChooseLogin"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:layout_marginTop="420dp"
            android:layout_marginStart="140dp"
            android:layout_width="wrap_content"
    />
</FrameLayout>