<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.078"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:id="@+id/textView2"/>
    <TextView
            android:text="@string/LoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.213"/>
    <TextView
            android:text="@string/SignUpText"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="210dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.226"/>
    <Button
            android:textSize="18sp"
            android:text="@string/ButtonChooseLogin"
            android:background="@drawable/button_rounded_corners"
            android:layout_width="166dp"
            android:layout_height="46dp"
            android:id="@+id/btnLogin" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.336"
            style="@android:style/Widget.Holo.Button.Borderless"
            app:layout_constraintHorizontal_bias="0.489"/>
    <Button
            android:textSize="18sp"
            android:text="@string/ButtonSignUp"
            android:layout_width="166dp"
            android:layout_height="46dp"
            android:background="@drawable/button_rounded_corners"
            android:id="@+id/btnSignUp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.614"
            style="@android:style/Widget.Holo.Button.Borderless" app:layout_constraintHorizontal_bias="0.489"/>

</android.support.constraint.ConstraintLayout>
