<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  tools:context=".Login">

    <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"/>

        <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/user_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <AutoCompleteTextView
                            android:id="@+id/user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/UsernameText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/PasswordText"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/LoginText"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" android:autofillHints=""/>
                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/login_button"
                        style="@android:style/Widget.Holo.Button.Borderless"
                        android:text="@string/ButtonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_rounded_corners"
                        android:layout_marginTop="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                />

                <Button
                        android:text="@string/ButtonSignUp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnSignUp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="140dp"
                        android:layout_width="wrap_content"
                />

            </LinearLayout>
        </ScrollView>
</FrameLayout>

